src/renderer/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Scenario: peg$parseScenario },
      peg$startRuleFunction  = peg$parseScenario,

      peg$c0 = function(lines) {
        return lines.filter((line) => line).reduce((b, a) => [
          ...b,
          ...Array.isArray(a) ? a : [a]
        ], [])
      },
      peg$c1 = function(name, text) {
        const [first, ...rest] = text
        return [
          {
            code: 101,
            parameters: []
          },
        	{
            code: 401,
            parameters: [first],
            name: name ? name : null
          },
          ...rest.map((param) => {
            return {
              code: 401,
              parameters: [param],
            }
          }),
        ]
      },
      peg$c2 = function(text) {
        return text
      },
      peg$c3 = function() {
        return undefined
      },
      peg$c4 = function(text) {
        return { code: 356, parameters: [text] }
      },
      peg$c5 = function(command) {
        return command
      },
      peg$c6 = function(code) {
        return {
          code,
          parameters: []
        }
      },
      peg$c7 = "tintScreen",
      peg$c8 = peg$literalExpectation("tintScreen", false),
      peg$c9 = function(parameters) {
        return {
          code: 223,
          parameters,
        }
      },
      peg$c10 = "flashScreen",
      peg$c11 = peg$literalExpectation("flashScreen", false),
      peg$c12 = function(parameters) {
        return {
          code: 224,
          parameters,
        }
      },
      peg$c13 = "shakeScreen",
      peg$c14 = peg$literalExpectation("shakeScreen", false),
      peg$c15 = function(parameters) {
        return {
          code: 225,
          parameters,
        }
      },
      peg$c16 = function(code, parameter) {
        return {
          code,
          parameters: [parameter],
        }
      },
      peg$c17 = "showPicture",
      peg$c18 = peg$literalExpectation("showPicture", false),
      peg$c19 = function(parameters) {
        return {
          code: 231,
          parameters,
        }
      },
      peg$c20 = "movePicture",
      peg$c21 = peg$literalExpectation("movePicture", false),
      peg$c22 = function(parameters) {
        return {
          code: 232,
          parameters,
        }
      },
      peg$c23 = "rotatePicture",
      peg$c24 = peg$literalExpectation("rotatePicture", false),
      peg$c25 = function(parameters) {
        return {
          code: 233,
          parameters,
        }
      },
      peg$c26 = "tintPicture",
      peg$c27 = peg$literalExpectation("tintPicture", false),
      peg$c28 = function(parameters) {
        return {
          code: 234,
          parameters,
        }
      },
      peg$c29 = "weather",
      peg$c30 = peg$literalExpectation("weather", false),
      peg$c31 = function(parameters) {
        return {
          code: 236,
          parameters,
        }
      },
      peg$c32 = function(code, parameters) {
        return {
          code,
          parameters,
        }
      },
      peg$c33 = "playMovie",
      peg$c34 = peg$literalExpectation("playMovie", false),
      peg$c35 = function(parameter) {
        return {
          code: 261,
          parameters: [ parameter ],
        }
      },
      peg$c36 = "changeBackground",
      peg$c37 = peg$literalExpectation("changeBackground", false),
      peg$c38 = function(parameters) {
        return {
          code: 284,
          parameters,
        }
      },
      peg$c39 = "fadeoutScreen",
      peg$c40 = peg$literalExpectation("fadeoutScreen", false),
      peg$c41 = function() {
        return 221
      },
      peg$c42 = "fadeinScreen",
      peg$c43 = peg$literalExpectation("fadeinScreen", false),
      peg$c44 = function() {
        return 222
      },
      peg$c45 = "saveBGM",
      peg$c46 = peg$literalExpectation("saveBGM", false),
      peg$c47 = function() {
        return 243
      },
      peg$c48 = "resumeBGM",
      peg$c49 = peg$literalExpectation("resumeBGM", false),
      peg$c50 = function() {
        return 244
      },
      peg$c51 = "stopSE",
      peg$c52 = peg$literalExpectation("stopSE", false),
      peg$c53 = function() {
        return 251
      },
      peg$c54 = "save",
      peg$c55 = peg$literalExpectation("save", false),
      peg$c56 = function() {
        return 352
      },
      peg$c57 = "gameOver",
      peg$c58 = peg$literalExpectation("gameOver", false),
      peg$c59 = function() {
        return 353
      },
      peg$c60 = "returnToTitle",
      peg$c61 = peg$literalExpectation("returnToTitle", false),
      peg$c62 = function() {
        return 354
      },
      peg$c63 = "wait",
      peg$c64 = peg$literalExpectation("wait", false),
      peg$c65 = function() {
        return 230
      },
      peg$c66 = "erasePicture",
      peg$c67 = peg$literalExpectation("erasePicture", false),
      peg$c68 = function() {
        return 235
      },
      peg$c69 = "fadeoutBGM",
      peg$c70 = peg$literalExpectation("fadeoutBGM", false),
      peg$c71 = function() {
        return 242
      },
      peg$c72 = "fadeoutBGS",
      peg$c73 = peg$literalExpectation("fadeoutBGS", false),
      peg$c74 = function() {
        return 246
      },
      peg$c75 = "playBGM",
      peg$c76 = peg$literalExpectation("playBGM", false),
      peg$c77 = function() {
        return 241
      },
      peg$c78 = "playBGS",
      peg$c79 = peg$literalExpectation("playBGS", false),
      peg$c80 = function() {
        return 245
      },
      peg$c81 = "playME",
      peg$c82 = peg$literalExpectation("playME", false),
      peg$c83 = function() {
        return 249
      },
      peg$c84 = "playSE",
      peg$c85 = peg$literalExpectation("playSE", false),
      peg$c86 = function() {
        return 250
      },
      peg$c87 = function(color, duration, wait) {
        return [
          color,
          duration,
          wait,
        ]
      },
      peg$c88 = "force:",
      peg$c89 = peg$literalExpectation("force:", false),
      peg$c90 = "speed:",
      peg$c91 = peg$literalExpectation("speed:", false),
      peg$c92 = function(force, speed, duration, wait) {
        return [
          force,
          speed,
          duration,
          wait,
        ]
      },
      peg$c93 = "type:",
      peg$c94 = peg$literalExpectation("type:", false),
      peg$c95 = function(weather, force, duration, wait) {
        return [
          weather,
          force,
          duration,
          wait,
        ]
      },
      peg$c96 = function(id, name, parameters) {
        return [
          id,
          name,
          ...parameters,
        ]  
      },
      peg$c97 = function(id, parameters, duration, wait) {
        return [
          id,
          null,
          ...parameters,
          duration,
          wait,
        ]
      },
      peg$c98 = function(id, rotateSpeed) {
        return [
          id,
          rotateSpeed,
        ]
      },
      peg$c99 = function(id, parameters) {
        return [
          id,
          ...parameters,
        ]
      },
      peg$c100 = "scale:",
      peg$c101 = peg$literalExpectation("scale:", false),
      peg$c102 = "opacity:",
      peg$c103 = peg$literalExpectation("opacity:", false),
      peg$c104 = "blend:",
      peg$c105 = peg$literalExpectation("blend:", false),
      peg$c106 = function(origin, position, scale, opacity, blend) {
        return [
          origin,
          ...position,
          ...scale,
          opacity,
          blend,
        ]
      },
      peg$c107 = "loopX:",
      peg$c108 = peg$literalExpectation("loopX:", false),
      peg$c109 = "loopY:",
      peg$c110 = peg$literalExpectation("loopY:", false),
      peg$c111 = function(name, loopX, loopY) {
        return [
          name,
          loopX === false ? 0 : 1,
          loopY === false ? 0 : 1,
          loopX === false ? 0 : loopX,
          loopY === false ? 0 : loopY,
        ]
      },
      peg$c112 = "volume:",
      peg$c113 = peg$literalExpectation("volume:", false),
      peg$c114 = "pitch:",
      peg$c115 = peg$literalExpectation("pitch:", false),
      peg$c116 = "pan:",
      peg$c117 = peg$literalExpectation("pan:", false),
      peg$c118 = function(name, volume, pitch, pan) {
        return [{
          name,
          volume,
          pitch,
          pan,
        }]
      },
      peg$c119 = function(r, g, b, a) {
        return [r, g, b, a]
      },
      peg$c120 = "duration:",
      peg$c121 = peg$literalExpectation("duration:", false),
      peg$c122 = function(duration) {
        return duration
      },
      peg$c123 = function(wait) {
        return !!wait
      },
      peg$c124 = function(x, y) {
        return [x, y]
      },
      peg$c125 = "byVariable",
      peg$c126 = peg$literalExpectation("byVariable", false),
      peg$c127 = function(position, byVariable) {
        return [byVariable ? 1 : 0, ...position]
      },
      peg$c128 = "rain",
      peg$c129 = peg$literalExpectation("rain", false),
      peg$c130 = function() {
        return 0
      },
      peg$c131 = "storm",
      peg$c132 = peg$literalExpectation("storm", false),
      peg$c133 = function() {
        return 1
      },
      peg$c134 = "snow",
      peg$c135 = peg$literalExpectation("snow", false),
      peg$c136 = function() {
        return 2
      },
      peg$c137 = "none",
      peg$c138 = peg$literalExpectation("none", false),
      peg$c139 = function() {
        return 3
      },
      peg$c140 = "\u96E8",
      peg$c141 = peg$literalExpectation("\u96E8", false),
      peg$c142 = "\u5D50",
      peg$c143 = peg$literalExpectation("\u5D50", false),
      peg$c144 = "\u96EA",
      peg$c145 = peg$literalExpectation("\u96EA", false),
      peg$c146 = "\u306A\u3057",
      peg$c147 = peg$literalExpectation("\u306A\u3057", false),
      peg$c148 = "topLeft",
      peg$c149 = peg$literalExpectation("topLeft", false),
      peg$c150 = "center",
      peg$c151 = peg$literalExpectation("center", false),
      peg$c152 = "\u5DE6\u4E0A",
      peg$c153 = peg$literalExpectation("\u5DE6\u4E0A", false),
      peg$c154 = "\u4E2D\u592E",
      peg$c155 = peg$literalExpectation("\u4E2D\u592E", false),
      peg$c156 = "normal",
      peg$c157 = peg$literalExpectation("normal", false),
      peg$c158 = "add",
      peg$c159 = peg$literalExpectation("add", false),
      peg$c160 = "multiply",
      peg$c161 = peg$literalExpectation("multiply", false),
      peg$c162 = "screen",
      peg$c163 = peg$literalExpectation("screen", false),
      peg$c164 = "\u901A\u5E38",
      peg$c165 = peg$literalExpectation("\u901A\u5E38", false),
      peg$c166 = "\u52A0\u7B97",
      peg$c167 = peg$literalExpectation("\u52A0\u7B97", false),
      peg$c168 = "\u4E57\u7B97",
      peg$c169 = peg$literalExpectation("\u4E57\u7B97", false),
      peg$c170 = "\u30B9\u30AF\u30EA\u30FC\u30F3",
      peg$c171 = peg$literalExpectation("\u30B9\u30AF\u30EA\u30FC\u30F3", false),
      peg$c172 = "//",
      peg$c173 = peg$literalExpectation("//", false),
      peg$c174 = function(chars) {
        return chars.join('')
      },
      peg$c175 = /^[0-9]/,
      peg$c176 = peg$classExpectation([["0", "9"]], false, false),
      peg$c177 = function(num) {
        return parseInt(num.join(''), 0)
      },
      peg$c178 = function(sign, num) {
        return parseInt((sign ? [sign, ...num] : num).join(''), 0)
      },
      peg$c179 = "true",
      peg$c180 = peg$literalExpectation("true", false),
      peg$c181 = function() { return true },
      peg$c182 = "false",
      peg$c183 = peg$literalExpectation("false", false),
      peg$c184 = function() { return false },
      peg$c185 = function() { return null },
      peg$c186 = function(text) {
        return text.join('')
      },
      peg$c187 = "-",
      peg$c188 = peg$literalExpectation("-", false),
      peg$c189 = "%",
      peg$c190 = peg$literalExpectation("%", false),
      peg$c191 = "@",
      peg$c192 = peg$literalExpectation("@", false),
      peg$c193 = ">",
      peg$c194 = peg$literalExpectation(">", false),
      peg$c195 = ":",
      peg$c196 = peg$literalExpectation(":", false),
      peg$c197 = "\"",
      peg$c198 = peg$literalExpectation("\"", false),
      peg$c199 = " ",
      peg$c200 = peg$literalExpectation(" ", false),
      peg$c201 = "[",
      peg$c202 = peg$literalExpectation("[", false),
      peg$c203 = "]",
      peg$c204 = peg$literalExpectation("]", false),
      peg$c205 = /^[^\n]/,
      peg$c206 = peg$classExpectation(["\n"], true, false),
      peg$c207 = "\n",
      peg$c208 = peg$literalExpectation("\n", false),
      peg$c209 = peg$anyExpectation(),
      peg$c210 = /^[^"\n]/,
      peg$c211 = peg$classExpectation(["\"", "\n"], true, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseScenario() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseLines();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseLines();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseLines() {
    var s0;

    s0 = peg$parseMessage();
    if (s0 === peg$FAILED) {
      s0 = peg$parseCommand();
      if (s0 === peg$FAILED) {
        s0 = peg$parsePluginCommand();
        if (s0 === peg$FAILED) {
          s0 = peg$parseComment();
          if (s0 === peg$FAILED) {
            s0 = peg$parseBlankLine();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseMessage() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseMessageCharacterName();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseText();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseText();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseText() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$currPos;
    peg$silentFails++;
    s3 = peg$parsePrefices();
    peg$silentFails--;
    if (s3 === peg$FAILED) {
      s2 = void 0;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseChars();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseSpace();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseSpace();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseEndOfLine();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c2(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseComment() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseCommentPrefix();
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseChars();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseEndOfLine();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMessageCharacterName() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseMessageCharacterPrefix();
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseChars();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseSpace();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseSpace();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseEndOfLine();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c2(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsePluginCommand() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parsePercent();
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseChars();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseSpace();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseSpace();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseEndOfLine();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }
